create fragments and enable viewBinding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def nav_version = "2.5.0"
     def room_version = "2.4.2"
     def retrofitVersion = '2.9.0'
