--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,9 @@ dependencies {
     // Coil
     implementation("io.coil-kt:coil:2.1.0")
 
+    // Material Design
+    implementation 'com.google.android.material:material:1.6.1'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
